--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar navbar-dark p-3">
       <div class="container">
-        <h1 class="navbar-brand mb-0 h1 text-white">Meus filmes</h1>
+        <h1 class="navbar-brand mb-0 h1 text-white">Meus Filmes Favoritos</h1>
       </div>
     </nav>
   </header>
@@ -22,21 +22,21 @@
     <form onsubmit="submitForm(event)" id="form" class="container mt-5">
       <h3 align="center">Listagem de Filmes</h3>
       <div class="row">
-        <div class="form-group col-6">
+        <div class="form-group col-12">
           <label for="imagem">Imagem</label>
           <input type="text" required id="imagem" class="form-control" placeholder="Digite a URL do pôster do filme">
         </div>
-        <div class="form-group col-6">
+        <div class="form-group col-12">
           <label for="titulo">Título</label>
           <input type="text" required id="titulo" class="form-control" placeholder="Digite o Títutlo do Filme">
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-6">
+        <div class="form-group col-12">
           <label for="genero">Gênero</label>
           <input type="text" required id="genero" class="form-control" placeholder="Digite o Gênero do Filme">
         </div>
-        <div class="form-group col-6">
+        <div class="form-group col-12">
           <label for="nota">Nota</label>
           <input type="text" id="nota" class="form-control" placeholder="Atribua uma nota de 0-5">
         </div>
