--- a/front-end/index.html
+++ b/front-end/index.html
@@ -51,6 +51,7 @@
       <div class="row" id="lista">
       </div>
     </section>
+    <footer> @cbernardox </footer>
   </main>
   <script src="index.js"></script>
 </body>
